<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">eID Suite</string>
    <string name="title_activity_view">eID Viewer</string>
    <string name="title_activity_sign">eID Signer</string>
    <string name="title_activity_auth">eID Authenticator</string>
    <string name="title_activity_pin">PIN</string>
    <string name="title_activity_pinpad">PIN on reader</string>

    <string name="action_settings">Settings</string>
    <string name="action_card">Read card</string>
    <string name="action_pin">Verify PIN</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_close">Close</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_locate">Update location</string>
    <string name="action_diag">Diagnose</string>
    <string name="action_go">Goto page</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_clean">Clear cookies</string>

    <string name="pref_fail">Fail on next error</string>
    <string name="pref_fail_summ">Fail the app on an eID error to allow the app owner to investigate the issue.  This setting is resets after the first eID error.</string>
    <string name="pref_view_share">Share after save</string>
    <string name="pref_view_share_summ">Automatically share the eID file after it is saved in Downloads</string>
    <string name="pref_sign_network">Online signature</string>
    <string name="pref_sign_network_summ">Add an official (trusted) time and validation information when signing a document depending on the network status.</string>
    <string-array name="pref_sign_network_entries">
        <item>Required</item>
        <item>If online</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sign_network_values" translatable="false">
        <item>required</item>
        <item>online</item>
        <item>never</item>
    </string-array>
    <string name="pref_sign_network_default" translatable="false">required</string>
    <string name="pref_sign_prefix">Signed file prefix</string>
    <string name="pref_sign_prefix_summ">The prefix to add to the file name of the signed file</string>
    <string name="pref_sign_prefix_default">signed_</string>
    <string name="pref_sign_share">Share after sign</string>
    <string name="pref_sign_share_summ">Automatically share the signed file after it is saved in Downloads</string>
    <string name="pref_auth_home">Home page</string>
    <string name="pref_auth_home_summ">Set the home page to go to when pushing the home button</string>
    <string name="pref_auth_search">Search page</string>
    <string name="pref_auth_search_summ">Set the search page to go to when pushing the search button</string>

    <string name="goback">Go Back</string>
    <string name="cont">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

    <string name="notiRInit">eID Service: Reader initialization</string>
    <string name="notiRInitMsg">Your eID reader is being initialized</string>
    <string name="notiConnect">eID Service: Connect your reader</string>
    <string name="notiConnectMsg">Please connect your eID reader to the tablet/phone</string>
    <string name="notiCInit">eID Service: Card initialization</string>
    <string name="notiCInitMsg">Your eID card is being initialized</string>
    <string name="notiInsert">eID Service: Insert your eID</string>
    <string name="notiInsertMsg">Please insert your eID in your %1$s eID reader</string>
    <string name="notiRead">eID Service: Card read</string>
    <string name="notiReadMsg">The data (e.g. identity, address, photo) of your eID card is being read</string>
    <string name="notiVerify">eID Service: Verify PIN</string>
    <string name="notiVerifyMsg">The PIN of your eID is being verified</string>
    <string name="notiAuth">eID Service: Authenticating</string>
    <string name="notiAuthyMsg">Your eID is being used to authenticate</string>
    <string name="notiSign">eID Service: Signing</string>
    <string name="notiSignMsg">Your eID is being used to sign</string>

    <string name="toastFailed">Action failed</string>
    <string name="toastEidFailed">eID action failed</string>
    <string name="toastEidCanceled">eID action canceled</string>
    <string name="toastEidAborted">eID action aborted</string>
    <string name="toastEidBlocked">eID card is blocked!</string>
    <string name="toastUnknownDevice">The connected device (%1$s) is not recognised</string>
    <string name="toastPinValid">PIN Valid</string>
    <string name="toastSaved">eID saved</string>
    <string name="toastSaveFailed">eID save failed</string>
    <string name="toastSigned">Document signed</string>
    <string name="toastFailedLocate">Location not determined in a timely manner</string>
    <string name="toastDownlComplete">Download complete</string>
    <string name="toastDownlFailed">Download failed</string>
    <string name="toastDiagNoDevices">Diagnose Failed! Ensure your reader is connected (and grant access to it).</string>
    <string name="toastDiagNoCard">No card detected! Ensure your card is properly inserted and try again.</string>
    <string name="toastDiagSuccess">Diagnose Succeeded! Good to go.</string>
    <string name="toastNoMailClient">No mail client found, please install one (e.g. Email)</string>
    <string name="toastNoActivityFound">No activity for the intended action (e.g. share)</string>
    <string name="toastNoPdfViewer">No PDF viewer found, please install one (e.g google drive)</string>
    <string name="toastNoNetwork">Connection required!</string>
    <string name="toastFileCanceled">File action canceled</string>
    <string name="toastInvalidUrl">Invalid URL</string>
    <string name="toastRequiresKitKat">Failed, requires Android 4.4 (KitKat) or higher</string>

    <string name="fragment_person">Person</string>
    <string name="fragment_address">Address</string>
    <string name="fragment_photo">Photo</string>
    <string name="fragment_card">Card</string>
    <string name="fragment_identity">Identity</string>
    <string name="fragment_idandcard">Identity &amp; Card</string>
    <string name="fragment_certs">Certificates</string>

    <string name="diagTitle">Diagnose</string>
    <string name="diagStartMsg">Ensure your reader is connected and your eID is inserted.</string>
    <string name="diagEndMsg">Incompatible readers/cards found.  Do you want to send the information to be investigated?</string>

    <string name="name">Name:</string>
    <string name="gNames">Given Names:</string>
    <string name="birthPlace">Place of birth:</string>
    <string name="birthDate">Date of birth:</string>
    <string name="natNumber">National Number:</string>
    <string name="nationality">Nationality:</string>
    <string name="title">Noble title:</string>
    <string name="specialStatus">Special Status:</string>
    <string name="sex">Sex:</string>

    <string name="street">Street:</string>
    <string name="zip">Postal code:</string>
    <string name="municipality">Municipality:</string>

    <string name="photoDesc">eID Photo</string>

    <string name="cardnr">Card number:</string>
    <string name="issuePlace">Place of issue:</string>
    <string name="chipnr">Chip number:</string>
    <string name="validFrom">Valid from:</string>
    <string name="validTo">Valid until:</string>

    <string name="usage">Usages:</string>
    <string name="pinRetries">%1$d remaining retries</string>
    <string name="usePinPad">Please enter your PIN on the reader.</string>

    <string name="selectFile">Select a file</string>
    <string name="reason">Reason</string>
    <string name="location">Location</string>
    <string name="signFields">Field to sign</string>
    <string name="invSign">Invisible Signature</string>
    <string name="signField">\"%1$s\" on page %2$s</string>
    <!--string name="signedField">\"%1$s\" (signed by %3$s) on page %2$s</string-->
    <string name="select">Select</string>
    <string name="view">View</string>
    <string name="sign">Sign</string>

    <string name="status_whiteCane">white cane</string>
    <string name="status_yellowCane">yellow cane</string>
    <string name="status_extMinority">extended minority</string>

    <string name="cardtype_citizen">IDENTITY CARD</string>
    <string name="cardtype_kids">KIDS CARD</string>
    <string name="cardtype_a">FOREIGNER CARD A</string>
    <string name="cardtype_b">FOREIGNER CARD B</string>
    <string name="cardtype_c">FOREIGNER CARD C</string>
    <string name="cardtype_d">FOREIGNER CARD D</string>
    <string name="cardtype_e">FOREIGNER CARD E</string>
    <string name="cardtype_eplus">FOREIGNER CARD E+</string>
    <string name="cardtype_f">FOREIGNER CARD F</string>
    <string name="cardtype_fplus">FOREIGNER CARD F+</string>

    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    
    <string name="validFromTo">Valid from %1$s to %2$s</string>

    <string name="usage_digitalSignature">digital signature</string>
    <string name="usage_nonRepudiation">non repudiation</string>
    <string name="usage_keyEncipherment">key encipherement</string>
    <string name="usage_dataEncipherment">data encipherment</string>
    <string name="usage_keyAgreement">key agreement</string>
    <string name="usage_keyCertSign">certificate signing</string>
    <string name="usage_cRLSign">CRL signing</string>
    <string name="usage_encipherOnly">encipher only</string>
    <string name="usage_decipherOnly">decipher only</string>

    <string name="class_audio">audio device</string>
    <string name="class_cdc_data">(CDC) communication device</string>
    <string name="class_comm">communication device</string>
    <string name="class_content_sec">security device</string>
    <string name="class_hid">human interface device</string>
    <string name="class_hub">USB hub</string>
    <string name="class_mass_storage">mass storage device</string>
    <string name="class_misc">(miscellaneous) wireless device</string>
    <string name="class_physica">physical device</string>
    <string name="class_printer">printer</string>
    <string name="class_still_image">still image device</string>
    <string name="class_unknown">unknown</string>
    <string name="class_video">video device</string>
    <string name="class_wireless_controller">wireless controller device</string>

    <string-array name="sign_reasons">
        <item>I am the author of this document</item>
        <item>I have reviewed this document</item>
        <item>I am approving this document</item>
        <item>I attest to the accuracy and integrity of this document</item>
        <item>I agree to the terms defined by the placement of my signature on this document</item>
        <item>I agree to specified portions of this document</item>
    </string-array>



</resources>
