<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_name"
        android:key="pref_cat_common">
        <CheckBoxPreference
            android:key="pref_fail"
            android:title="@string/pref_fail"
            android:summary="@string/pref_fail_summ"
            android:defaultValue="false" />
        <!-- TODO: add privacy setting -->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_activity_sign"
        android:key="pref_cat_sign">
        <ListPreference
            android:key="pref_sign_network"
            android:title="@string/pref_sign_network"
            android:summary="@string/pref_sign_network_summ"
            android:entries="@array/pref_sign_network_entries"
            android:entryValues="@array/pref_sign_network_values"
            android:defaultValue="@string/pref_sign_network_default" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_activity_auth"
        android:key="pref_cat_auth">
        <EditTextPreference
            android:key="pref_auth_home"
            android:title="@string/pref_auth_home"
            android:summary="@string/pref_auth_home_summ"
            android:defaultValue="http://www.taxonweb.be/"
            android:inputType="textUri" />
        <EditTextPreference
            android:key="pref_auth_search"
            android:title="@string/pref_auth_search"
            android:summary="@string/pref_auth_search_summ"
            android:defaultValue="http://www.google.be"
            android:inputType="textUri" />

    </PreferenceCategory>
</PreferenceScreen>