<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SignActivity">

    <TextView
        android:id="@+id/signFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectFile"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        style="?android:listSeparatorTextViewStyle"/>

    <Spinner
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signFields"
        style="?android:listSeparatorTextViewStyle"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invSign"
        android:enabled="false"
        android:id="@+id/signInv" />

    <ListView
        android:id="@+id/signFields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            />
        <Button
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:enabled="false"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:enabled="false"
            android:layout_alignParentRight="true" />
        </RelativeLayout>
</LinearLayout>
